--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -9,10 +9,18 @@
       {{ post.content|linebreaks }}
     </div>
 
+    {% if post.tags.all %}
+      <p>Tags:
+        {% for tag in post.tags.all %}
+          <a href="{% url 'posts_by_tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      </p>
+    {% endif %}
+
     {% if user == post.author %}
       <p>
-        <a href="{% url 'post-update' post.pk %}">Edit post</a> |
-        <a href="{% url 'post-delete' post.pk %}">Delete post</a>
+        <a href="{% url 'post_update' post.pk %}">Edit post</a> |
+        <a href="{% url 'post_delete' post.pk %}">Delete post</a>
       </p>
     {% endif %}
   </article>
@@ -29,8 +37,8 @@
 
         {% if user == comment.author %}
           <p>
-            <a href="{% url 'comment-update' comment.pk %}">Edit</a> |
-            <a href="{% url 'comment-delete' comment.pk %}">Delete</a>
+            <a href="{% url 'comment_update' comment.pk %}">Edit</a> |
+            <a href="{% url 'comment_delete' comment.pk %}">Delete</a>
           </p>
         {% endif %}
       </div>
@@ -43,7 +51,7 @@
     {% if user.is_authenticated %}
       <div id="new-comment">
         <h3>Leave a comment</h3>
-        <form method="post" action="{% url 'comment-create' post.pk %}">
+        <form method="post" action="{% url 'comment_create' post.pk %}">
           {% csrf_token %}
           {{ comment_form.as_p }}
           <button type="submit">Post comment</button>
@@ -53,5 +61,4 @@
       <p><a href="{% url 'login' %}?next={{ request.path }}">Login</a> to post a comment.</p>
     {% endif %}
   </section>
-
 {% endblock %}
