--- a/django_blog/blog/templates/blog/posts_list.html
+++ b/django_blog/blog/templates/blog/posts_list.html
@@ -15,6 +15,16 @@
       <p><a href="{% url 'post_detail' post.pk %}">Read more</a></p>
     </article>
     <hr>
+
+<p>
+  Tags:
+  {% for tag in post.tags.all %}
+    <a href="{% url 'posts_by_tag' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+  {% empty %}
+    No tags
+  {% endfor %}
+</p>
+
   {% empty %}
     <p>No posts yet.</p>
   {% endfor %}
